# fingerprintotron

./: CMakeLists.txt  README.md  comparisonresult.h  compressedcomparisonresult.h  compresseddocument.h  document.h  documentcollectionanalyser.h  fingerprintgenerator.h  hasher.h  icomparisonresult.h  idocument.h  main.cpp  main_dir.cpp  ngramiterator.h
examples/: random.txt  test1_same.txt  test2.txt
uml/: fingerprint_generation_seq.uml
unittests/: CMakeLists.txt  test.h  test_comparisonresult.cpp  test_compresseddocument.cpp  test_document.cpp  test_fingerprintgenerator.cpp  test_hasher.cpp  test_ngramiterator.cpp  test_system.cpp
